tests/semantic/invalid/variable_already_declared.c
/*
 * Multi-line comment.
 */

#include <stdint.h>
#include <stdio.h>

extern int32_t a;
extern int32_t a;

extern int32_t b;
extern int64_t b;